<resources>
    <string name="app_name">Book</string>
    <string name="email">email</string>
    <string name="password">password</string>

    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">sign-up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="book_name">book name</string>
    <string name="author">Author</string>
    <string name="next">next</string>
    <string name="textf">choose your filtre</string>
    <string name="search">search</string>
    <string name="menu_1">add to favorites</string>

</resources>