<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".filterFragment"
    tools:ignore="InvalidId">

    <TextView
        android:id="@+id/textfiltre"
        android:text="@string/textf"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        tools:ignore="TextViewEdits" />

    <RadioGroup
        android:id="@+id/filtre"
        android:layout_width="251dp"
        android:layout_height="327dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"

       >

        <RadioButton
            android:id="@+id/Category"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:checked="true"
            android:text="@string/category" />

        <RadioButton

            android:id="@+id/book_name"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/book_name" />

        <RadioButton
            android:id="@+id/Author"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/author" />

        <Button
            android:id="@+id/btnfilter"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/next" />
    </RadioGroup>

</FrameLayout>